Terraform/ig_config.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.eks_vpc.id

    tags = {
        Name = "igw"
    }
}
